--- a/src/application/AddLogStage.fxml
+++ b/src/application/AddLogStage.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,11 +11,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="336.0" prefWidth="295.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="application.AddLogStageController">
+<BorderPane prefHeight="336.0" prefWidth="295.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddLogStageController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="36.0" prefWidth="281.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Add" />
+            <Button mnemonicParsing="false" onAction="#onAddButtonClick" text="Add" />
          </children>
       </HBox>
    </bottom>
@@ -41,21 +42,21 @@
             </Label>
             <Label text="Code" GridPane.rowIndex="2" />
             <Label text="PurchasePrice" GridPane.rowIndex="3" />
-            <TextField prefHeight="27.0" prefWidth="202.0" GridPane.columnIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField text="0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="idText" prefHeight="27.0" prefWidth="202.0" GridPane.columnIndex="1" />
+            <TextField fx:id="codeText" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="purchasePriceText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label text="Date" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField text="0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField text="0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="purchaseNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="sellingPriceText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <Label text="PurchaseNum" GridPane.rowIndex="4" />
             <Label text="SellingPrice" GridPane.rowIndex="5" />
             <Label text="SellingNum" GridPane.rowIndex="6" />
-            <TextField text="0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="sellingNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <DatePicker fx:id="datePicker" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </center>
