--- a/src/application/TradeLogTableStage.fxml
+++ b/src/application/TradeLogTableStage.fxml
@@ -23,7 +23,7 @@
       </TableView>
    </center>
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
+      <MenuBar layoutX="-200.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
