--- a/src/application/TradeLogTableStage.fxml
+++ b/src/application/TradeLogTableStage.fxml
@@ -47,6 +47,7 @@
               <items>
                   <MenuItem mnemonicParsing="false" onAction="#onShowAddBookInfoWindowMenuClick" text="Show Add BookInfo Window" />
                 <MenuItem mnemonicParsing="false" onAction="#onShowAddLogWindowMenuClick" text="Show AddLog Window" />
+                  <MenuItem mnemonicParsing="false" onAction="#onShowBookInfoTableWindowMenuClick" text="Show Book Info Window" />
               </items>
             </Menu>
           <Menu mnemonicParsing="false" text="Help">
