--- a/src/application/AddLogStage.fxml
+++ b/src/application/AddLogStage.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -11,11 +15,12 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="336.0" prefWidth="295.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddLogStageController">
+<BorderPane prefHeight="336.0" prefWidth="295.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddLogStageController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="36.0" prefWidth="281.0" BorderPane.alignment="CENTER">
          <children>
             <Button mnemonicParsing="false" onAction="#onAddButtonClick" text="Add" />
+            <Button mnemonicParsing="false" onAction="#onTestButtonClick" text="TestButton" />
          </children>
       </HBox>
    </bottom>
