--- a/src/fxml/AddLogStage.fxml
+++ b/src/fxml/AddLogStage.fxml
@@ -31,7 +31,6 @@
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="114.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -40,28 +39,22 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="ID">
+            <Label text="Code" GridPane.rowIndex="1" />
+            <Label text="PurchasePrice" GridPane.rowIndex="2" />
+            <TextField fx:id="purchasePriceText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Date">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label text="Code" GridPane.rowIndex="2" />
-            <Label text="PurchasePrice" GridPane.rowIndex="3" />
-            <TextField fx:id="idText" prefHeight="27.0" prefWidth="202.0" GridPane.columnIndex="1" />
-            <TextField fx:id="purchasePriceText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label text="Date" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <TextField fx:id="purchaseNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="sellingPriceText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label text="PurchaseNum" GridPane.rowIndex="4" />
-            <Label text="SellingPrice" GridPane.rowIndex="5" />
-            <Label text="SellingNum" GridPane.rowIndex="6" />
-            <TextField fx:id="sellingNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <DatePicker fx:id="datePicker" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ComboBox fx:id="codeCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="purchaseNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="sellingPriceText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="PurchaseNum" GridPane.rowIndex="3" />
+            <Label text="SellingPrice" GridPane.rowIndex="4" />
+            <Label text="SellingNum" GridPane.rowIndex="5" />
+            <TextField fx:id="sellingNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <DatePicker fx:id="datePicker" GridPane.columnIndex="1" />
+            <ComboBox fx:id="codeCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </center>
