--- a/src/fxml/TradeLogTableStage.fxml
+++ b/src/fxml/TradeLogTableStage.fxml
@@ -50,7 +50,7 @@
             </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" onAction="#onHelpMenuClick" text="Show Help" />
             </items>
           </Menu>
         </menus>
