--- a/src/fxml/AddLogStage.fxml
+++ b/src/fxml/AddLogStage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.effect.*?>
 <?import java.lang.*?>
@@ -17,52 +18,72 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="336.0" prefWidth="295.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddLogStageController">
+<BorderPane prefHeight="341.0" prefWidth="536.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddLogStageController">
    <bottom>
-      <HBox alignment="CENTER" prefHeight="36.0" prefWidth="281.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="37.0" prefWidth="456.0" BorderPane.alignment="CENTER">
          <children>
             <Button mnemonicParsing="false" onAction="#onAddButtonClick" text="Add to table" />
          </children>
       </HBox>
    </bottom>
-   <center>
-      <GridPane prefHeight="125.0" prefWidth="285.0" BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="108.0" minWidth="10.0" prefWidth="107.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="114.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Code" GridPane.rowIndex="1" />
-            <Label text="PurchasePrice" GridPane.rowIndex="2" />
-            <TextField fx:id="purchasePriceText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label text="Date">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <TextField fx:id="purchaseNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="sellingPriceText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Label text="PurchaseNum" GridPane.rowIndex="3" />
-            <Label text="SellingPrice" GridPane.rowIndex="4" />
-            <Label text="SellingNum" GridPane.rowIndex="5" />
-            <TextField fx:id="sellingNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <DatePicker fx:id="datePicker" GridPane.columnIndex="1" />
-            <ComboBox fx:id="codeCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
-   </center>
    <top>
       <Label text="Please input follow data to add new record" textFill="#833333" BorderPane.alignment="CENTER">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor></Label>
    </top>
+   <left>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane prefHeight="125.0" prefWidth="285.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="108.0" minWidth="10.0" prefWidth="107.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="114.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Code" GridPane.rowIndex="1" />
+                  <Label text="PurchasePrice" GridPane.rowIndex="2" />
+                  <TextField fx:id="purchasePriceText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label text="Date">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="purchaseNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="sellingPriceText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label text="PurchaseNum" GridPane.rowIndex="3" />
+                  <Label text="SellingPrice" GridPane.rowIndex="4" />
+                  <Label text="SellingNum" GridPane.rowIndex="5" />
+                  <TextField fx:id="sellingNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <DatePicker fx:id="datePicker" GridPane.columnIndex="1" />
+                  <ComboBox fx:id="codeCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
+         </children>
+      </HBox>
+   </left>
+   <center>
+      <VBox prefHeight="287.0" prefWidth="326.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Memo">
+               <VBox.margin>
+                  <Insets left="10.0" top="10.0" />
+               </VBox.margin>
+            </Label>
+            <TextArea fx:id="memoArea" prefHeight="262.0" prefWidth="277.0">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </TextArea>
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
