--- a/src/fxml/AddBookInfoStage.fxml
+++ b/src/fxml/AddBookInfoStage.fxml
@@ -26,16 +26,13 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label prefHeight="17.0" prefWidth="118.0" text="SECURITIES CODE" />
-            <Label text="BOOK NAME" GridPane.rowIndex="1" />
-            <Label text="MARKET" GridPane.rowIndex="2" />
+            <Label prefHeight="17.0" prefWidth="118.0" styleClass="labels" text="SECURITIES CODE" />
+            <Label styleClass="labels" text="BOOK NAME" GridPane.rowIndex="1" />
+            <Label styleClass="labels" text="MARKET" GridPane.rowIndex="2" />
             <TextField fx:id="securitiesCodeText" prefHeight="25.0" prefWidth="254.0" GridPane.columnIndex="1" />
             <TextField fx:id="bookNameText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="marcketCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </center>
-   <top>
-      <Label text="Add Book Name" BorderPane.alignment="CENTER" />
-   </top>
 </BorderPane>
