--- a/src/application/application.css
+++ b/src/application/application.css
@@ -4,4 +4,19 @@
 
 .labels {
 	-fx-text-fill:white;
+	-fx-font-weight:bold;
+	-fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+	
+}
+.column{
+	-fx-text-fill:white;
+	-fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+}
+
+.button{
+	
+	   -fx-effect: innershadow( gaussian , rgba(0,0,0,0.7) , 20,0,0,0 );
+	   -fx-font-weight:bold;
+	   -fx-text-fill:#8000ff; 
+	
 }
