--- a/src/application/application.css
+++ b/src/application/application.css
@@ -11,12 +11,15 @@
 .column{
 	-fx-text-fill:white;
 	-fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+	
 }
 
 .button{
 	
 	   -fx-effect: innershadow( gaussian , rgba(0,0,0,0.7) , 20,0,0,0 );
 	   -fx-font-weight:bold;
-	   -fx-text-fill:#8000ff; 
-	
+	   -fx-text-fill:#8000ff; 	
+}
+.number-column{
+	-fx-alignment:center-right;
 }
