--- a/src/fxml/BookInfoTableStage.fxml
+++ b/src/fxml/BookInfoTableStage.fxml
@@ -9,11 +9,12 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BookInfoTableStageController">
    <center>
-      <TableView fx:id="tableView" editable="true" prefHeight="289.0" prefWidth="334.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="tableView" editable="true" prefHeight="289.0" prefWidth="439.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="codeColumn" text="CODE" />
           <TableColumn fx:id="bookNameColumn" prefWidth="180.0" text="BOOK NAME " />
             <TableColumn fx:id="marcketColumn" onEditCommit="#onMarcketColumnCommit" prefWidth="97.0" text="MARCKET" />
+            <TableColumn fx:id="profitColumn" editable="false" prefWidth="75.0" text="PROFIT" />
         </columns>
          <contextMenu>
             <ContextMenu>
