--- a/src/fxml/AddLogStage.fxml
+++ b/src/fxml/AddLogStage.fxml
@@ -18,21 +18,21 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="341.0" prefWidth="536.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddLogStageController">
+<BorderPane prefHeight="341.0" prefWidth="582.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddLogStageController">
    <bottom>
-      <HBox alignment="CENTER" prefHeight="37.0" prefWidth="456.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="37.0" prefWidth="559.0" BorderPane.alignment="CENTER">
          <children>
             <Button mnemonicParsing="false" onAction="#onAddButtonClick" text="Add to table" />
          </children>
       </HBox>
    </bottom>
    <left>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="304.0" prefWidth="314.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane prefHeight="125.0" prefWidth="285.0">
+            <GridPane prefHeight="311.0" prefWidth="302.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="108.0" minWidth="10.0" prefWidth="107.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="114.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="82.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="203.0" minWidth="10.0" prefWidth="203.0" />
               </columnConstraints>
               <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -58,21 +58,21 @@
                   <Label styleClass="labels" text="SellingNum" GridPane.rowIndex="5" />
                   <TextField fx:id="sellingNumText" text="0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                   <DatePicker fx:id="datePicker" GridPane.columnIndex="1" />
-                  <ComboBox fx:id="codeCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <ComboBox fx:id="codeCombo" prefHeight="27.0" prefWidth="192.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
          </children>
       </HBox>
    </left>
    <center>
-      <VBox prefHeight="287.0" prefWidth="326.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="301.0" prefWidth="310.0" BorderPane.alignment="CENTER">
          <children>
             <Label styleClass="labels" text="Memo">
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </Label>
-            <TextArea fx:id="memoArea" prefHeight="262.0" prefWidth="277.0">
+            <TextArea fx:id="memoArea" prefHeight="257.0" prefWidth="254.0">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
