--- a/src/fxml/TradeLogTableStage.fxml
+++ b/src/fxml/TradeLogTableStage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import java.lang.*?>
@@ -38,7 +39,7 @@
                      </font></Button>
                </children>
             </HBox>
-            <TableView id="tradeLogTable" fx:id="tableView" editable="true" onMouseClicked="#onMouseClicked" prefHeight="611.0" prefWidth="966.0">
+            <TableView id="tradeLogTable" fx:id="tableView" editable="true" onMouseClicked="#onMouseClicked" prefHeight="397.0" prefWidth="1110.0">
               <columns>
                 <TableColumn fx:id="idColumn" prefWidth="41.0" text="ID" visible="false" />
                 <TableColumn fx:id="codeColumn" onEditCommit="#onSecuritiesCodeColumnCommit" prefWidth="53.0" text="CODE" />
@@ -58,7 +59,7 @@
                      </columns>
                   </TableColumn>
                   <TableColumn fx:id="pLColumn" onEditCommit="#onPLColumnCommit" prefWidth="75.0" styleClass="number-column" text="PL" />
-                  <TableColumn fx:id="memoColumn" prefWidth="379.0" text="MEMO" />
+                  <TableColumn fx:id="memoColumn" onEditCommit="#onMemoColumnCommit" prefWidth="379.0" text="MEMO" />
               </columns>
                <contextMenu>
                   <ContextMenu>
@@ -68,25 +69,69 @@
                   </ContextMenu>
                </contextMenu>
             </TableView>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox prefHeight="154.0" prefWidth="1110.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#onAction" text="UpdateMemo">
+                  <GridPane prefHeight="100.0" prefWidth="305.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="53.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="247.0" minWidth="10.0" prefWidth="247.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <ComboBox fx:id="codeField" prefHeight="27.0" prefWidth="236.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <DatePicker fx:id="dateField" prefHeight="27.0" prefWidth="180.0" GridPane.columnIndex="1" />
+                        <Label styleClass="labels" text="日付" />
+                        <Label styleClass="labels" text="コード" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Label>
+                     </children>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </GridPane>
+                  <GridPane prefHeight="89.0" prefWidth="209.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="96.0" minWidth="10.0" prefWidth="68.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="132.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label styleClass="labels" text="買値" />
+                        <Label styleClass="labels" text="買い株数" GridPane.rowIndex="1" />
+                        <Label styleClass="labels" text="売値" GridPane.rowIndex="2" />
+                        <Label styleClass="labels" text="売り株数" GridPane.rowIndex="3" />
+                        <TextField fx:id="purchasePriceField" GridPane.columnIndex="1" />
+                        <TextField fx:id="purchaseNumberField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="sellingPriceField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="sellingNumberField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                     </children>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </GridPane>
+                  <TextArea fx:id="memoArea" prefHeight="119.0" prefWidth="417.0">
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="10.0" top="5.0" />
+                     </HBox.margin>
+                  </TextArea>
+                  <Button mnemonicParsing="false" onAction="#onAddButtonClicked" styleClass="labels" text="レコードの追加">
                      <HBox.margin>
                         <Insets left="10.0" top="5.0" />
                      </HBox.margin>
                   </Button>
-                  <Label fx:id="idCountText" styleClass="labels" text="countText">
-                     <HBox.margin>
-                        <Insets left="10.0" top="5.0" />
-                     </HBox.margin>
-                  </Label>
                </children>
             </HBox>
-            <TextArea fx:id="memoArea" onKeyTyped="#onKeyTyped" prefHeight="200.0" prefWidth="200.0">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-               </VBox.margin>
-            </TextArea>
          </children>
       </VBox>
    </center>
